# thoughts

./: .gitignore  .gitmodules  CMakeLists.txt
include/: application.h  graphics.h
include/input/: input_subsystem.h
include/renderers/: renderer.h
include/renderers/overlay/: overlay.h
include/renderers/tool/: tool_renderer.h
include/windows/: window.h  window_manager.h
src/: application.cpp  main.cpp
src/input/: glfw_keys.cpp  input_keys.cpp  input_subsystem.cpp
src/input/impl/: input_subsystem_impl_windows.cpp  input_subsystem_impl_windows.h
src/renderers/overlay/: overlay.cpp
src/renderers/tool/: tool_renderer.cpp
src/windows/: window.cpp  window_manager.cpp
